--- a/pom.xml
+++ b/pom.xml
@@ -21,15 +21,22 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
-    <dependencies>
-    </dependencies>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <goals>install</goals>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
+    <scm>
+        <developerConnection>scm:git:https://github.com/Rmsilva1/sgf-pet-clinic.git</developerConnection>
+    </scm>
 </project>
