Updated profiles for JPA service, tested active profiles. Closes #48

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.messages.basename=messages/messages
+
+spring.profiles.active=springdatajpa
