--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -72,15 +72,8 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
-                <dependencies>
-                    <!--<dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>${junit-platform.version}</version>
-                    </dependency>-->
-                </dependencies>
             </plugin>
         </plugins>
     </build>
