--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -49,8 +49,8 @@
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <scope>test</scope>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.0.3</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
