--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -114,6 +114,11 @@
                 </configuration>
                 <dependencies>
                     <dependency>
+                        <groupId>org.junit.platform</groupId>
+                        <artifactId>junit-platform-surefire-provider</artifactId>
+                        <version>1.0.3</version>
+                    </dependency>
+                    <dependency>
                         <groupId>org.webjars</groupId>
                         <artifactId>bootstrap</artifactId>
                         <version>${webjars-bootstrap.version}</version>
