--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
                 <configuration>
                     <argLine>
                         --illegal-access=permit
@@ -63,7 +64,4 @@
             </plugin>
         </plugins>
     </build>
-    <scm>
-        <developerConnection>scm:git:https://github.com/Rmsilva1/sgf-pet-clinic.git</developerConnection>
-    </scm>
 </project>
